header logo left align fix

--- a/src/assets/styles/header.css
+++ b/src/assets/styles/header.css
@@ -10,6 +10,7 @@
 }
 .headerContainer {
   max-width: 90%;
+  padding: 0 !important;
 }
 .header_outer {
   width: 100%;
