--- a/src/assets/styles/site-main.css
+++ b/src/assets/styles/site-main.css
@@ -36,6 +36,7 @@ p {
     width: 100%;
     display: flex;
     padding-bottom: 20px;
+    justify-content: space-between;
 }
 
 .main_logo{ width:100%;}	
